--- a/mx.ini
+++ b/mx.ini
@@ -5,8 +5,8 @@ ruleset=✨ AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/mai
 ruleset=👨🏿‍💻 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=👨🏿‍💻 GitHub,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
-ruleset=🥳 PikPak,http://192.168.1.11/Docmuments/clash/pikpak.list
-ruleset=📺 Emby,http://192.168.1.11/Docmuments/clash/emby.list
+ruleset=🥳 PikPak,https://raw.githubusercontent.com/sunshineya66/clash/refs/heads/main/pikpak.list
+ruleset=📺 Emby,https://raw.githubusercontent.com/sunshineya66/clash/refs/heads/main/emby.list
 ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
