--- a/mx.ini
+++ b/mx.ini
@@ -16,76 +16,29 @@ ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT
-custom_proxy_group=🍺 BiliBili`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT
-custom_proxy_group=✨ AI`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他`[]大机场`[]大机场普速`[]大机场高速`[]大机场下载
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他`[]大机场`[]大机场普速`[]大机场高速`[]大机场下载`[]REJECT`[]大机场`[]大机场普速`[]大机场高速`[]大机场下载
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他`[]大机场`[]大机场普速`[]大机场高速`[]大机场下载
-custom_proxy_group=🥳 PikPak`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他`[]大机场`[]大机场普速`[]大机场高速`[]大机场下载
-custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他`[]大机场`[]大机场普速`[]大机场高速`[]大机场下载
-custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动切换`[]所有-自动`[]REJECT`[]IPLC`[]CN2`[]福利`[]游戏`[]IPLC-VIP1`[]IPLC-VIP2`[]IPLC-VIP3`[]CN2-VIP1`[]CN2-VIP2`[]CN2-VIP3`[]IPLC-VIP1-香港`[]IPLC-VIP1-台湾`[]IPLC-VIP1-日本`[]IPLC-VIP1-韩国`[]IPLC-VIP1-新加坡`[]IPLC-VIP1-美国`[]IPLC-VIP1-其他`[]IPLC-VIP2-香港`[]IPLC-VIP2-台湾`[]IPLC-VIP2-日本`[]IPLC-VIP2-韩国`[]IPLC-VIP2-新加坡`[]IPLC-VIP2-美国`[]IPLC-VIP2-其他`[]IPLC-VIP3-香港`[]IPLC-VIP3-台湾`[]IPLC-VIP3-日本`[]IPLC-VIP3-韩国`[]IPLC-VIP3-新加坡`[]IPLC-VIP3-美国`[]IPLC-VIP3-其他`[]CN2-VIP1-香港`[]CN2-VIP1-台湾`[]CN2-VIP1-日本`[]CN2-VIP1-韩国`[]CN2-VIP1-新加坡`[]CN2-VIP1-美国`[]CN2-VIP1-其他`[]CN2-VIP2-香港`[]CN2-VIP2-台湾`[]CN2-VIP2-日本`[]CN2-VIP2-韩国`[]CN2-VIP2-新加坡`[]CN2-VIP2-美国`[]CN2-VIP2-其他`[]CN2-VIP3-香港`[]CN2-VIP3-台湾`[]CN2-VIP3-日本`[]CN2-VIP3-韩国`[]CN2-VIP3-新加坡`[]CN2-VIP3-美国`[]CN2-VIP3-其他
+custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]手动`[]自动`
+custom_proxy_group=🍺 BiliBili`select`[]DIRECT`[]手动`[]自动`
+custom_proxy_group=✨ AI`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=🥳 PikPak`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
 
 ;3、节点组
-custom_proxy_group=手动切换`select`.*
-custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC`url-test`(?=.*IPLC)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2`url-test`(?=.*CN2)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=福利`select`(?=.*福利)
-custom_proxy_group=游戏`select`(?=.*游戏)
-custom_proxy_group=IPLC-VIP1`url-test`(?=.*IPLC)(?=.*V1)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2`url-test`(?=.*IPLC)(?=.*V2)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3`url-test`(?=.*IPLC)(?=.*V3)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1`url-test`(?=.*CN2)(?=.*V1)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2`url-test`(?=.*CN2)(?=.*V2)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3`url-test`(?=.*CN2)(?=.*V3)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP1-香港`url-test`(?=.*IPLC)(?=.*V1)(?=.*香港)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP1-台湾`url-test`(?=.*IPLC)(?=.*V1)(?=.*台湾)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP1-日本`url-test`(?=.*IPLC)(?=.*V1)(?=.*日本)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP1-韩国`url-test`(?=.*IPLC)(?=.*V1)(?=.*韩国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP1-新加坡`url-test`(?=.*IPLC)(?=.*V1)(?=.*新加坡)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP1-美国`url-test`(?=.*IPLC)(?=.*V1)(?=.*美国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP1-其他`url-test`(?=.*IPLC)(?=.*V1)(?=.*其他)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2-香港`url-test`(?=.*IPLC)(?=.*V2)(?=.*香港)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2-台湾`url-test`(?=.*IPLC)(?=.*V2)(?=.*台湾)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2-日本`url-test`(?=.*IPLC)(?=.*V2)(?=.*日本)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2-韩国`url-test`(?=.*IPLC)(?=.*V2)(?=.*韩国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2-新加坡`url-test`(?=.*IPLC)(?=.*V2)(?=.*新加坡)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2-美国`url-test`(?=.*IPLC)(?=.*V2)(?=.*美国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP2-其他`url-test`(?=.*IPLC)(?=.*V2)(?=.*其他)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3-香港`url-test`(?=.*IPLC)(?=.*V3)(?=.*香港)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3-台湾`url-test`(?=.*IPLC)(?=.*V3)(?=.*台湾)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3-日本`url-test`(?=.*IPLC)(?=.*V3)(?=.*日本)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3-韩国`url-test`(?=.*IPLC)(?=.*V3)(?=.*韩国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3-新加坡`url-test`(?=.*IPLC)(?=.*V3)(?=.*新加坡)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3-美国`url-test`(?=.*IPLC)(?=.*V3)(?=.*美国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=IPLC-VIP3-其他`url-test`(?=.*IPLC)(?=.*V3)(?=.*其他)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1-香港`url-test`(?=.*CN2)(?=.*V1)(?=.*香港)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1-台湾`url-test`(?=.*CN2)(?=.*V1)(?=.*台湾)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1-日本`url-test`(?=.*CN2)(?=.*V1)(?=.*日本)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1-韩国`url-test`(?=.*CN2)(?=.*V1)(?=.*韩国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1-新加坡`url-test`(?=.*CN2)(?=.*V1)(?=.*新加坡)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1-美国`url-test`(?=.*CN2)(?=.*V1)(?=.*美国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP1-其他`url-test`(?=.*CN2)(?=.*V1)(?=.*其他)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2-香港`url-test`(?=.*CN2)(?=.*V2)(?=.*香港)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2-台湾`url-test`(?=.*CN2)(?=.*V2)(?=.*台湾)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2-日本`url-test`(?=.*CN2)(?=.*V2)(?=.*日本)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2-韩国`url-test`(?=.*CN2)(?=.*V2)(?=.*韩国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2-新加坡`url-test`(?=.*CN2)(?=.*V2)(?=.*新加坡)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2-美国`url-test`(?=.*CN2)(?=.*V2)(?=.*美国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP2-其他`url-test`(?=.*CN2)(?=.*V2)(?=.*其他)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3-香港`url-test`(?=.*CN2)(?=.*V3)(?=.*香港)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3-台湾`url-test`(?=.*CN2)(?=.*V3)(?=.*台湾)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3-日本`url-test`(?=.*CN2)(?=.*V3)(?=.*日本)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3-韩国`url-test`(?=.*CN2)(?=.*V3)(?=.*韩国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3-新加坡`url-test`(?=.*CN2)(?=.*V3)(?=.*新加坡)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3-美国`url-test`(?=.*CN2)(?=.*V3)(?=.*美国)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=CN2-VIP3-其他`url-test`(?=.*CN2)(?=.*V3)(?=.*其他)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=大机场`url-test`(普速|高速|下载)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=大机场普速`url-test`(普速)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=大机场高速`url-test`(高速)`http://www.gstatic.com/generate_204`300,5,10
-custom_proxy_group=大机场下载`url-test`(下载)`http://www.gstatic.com/generate_204`300,5,10
+custom_proxy_group=手动`select`.*
+custom_proxy_group=所有`url-test`.*`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=港台日新韩`url-test`(广港|广台|广日|广新|广韩|广美|香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea|亚太)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=台日新韩`url-test`(广台|广日|广新|广韩|广美|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=香港`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=台湾`url-test`(广台|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=日本`url-test`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=新加坡`url-test`(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=韩国`url-test`(广韩|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=美国`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|🇺🇸|United States)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=其他`url-test`(柬埔|斯坦|尼泊|也纳|克兰|比利时|尔兰|立陶宛|冰岛|秘鲁|耳其|利亚|埃及|希腊|斯洛伐克|孟加|芬兰|阿联|英国|德国|南非|意大|法国|加拿|墨西|印度|越南|罗斯|瑞士|瑞典|智利|荷兰|比亚|巴西|沙特|班牙|泰国|Germany|Bertain|Luxeourg|Argentina|Turkey|India)`http://www.gstatic.com/generate_204`60,150
 
 ;4、启用规则集
 enable_rule_generator=true
