--- a/ouo.ini
+++ b/ouo.ini
@@ -18,18 +18,18 @@ ruleset=➡️ 国内,[]FINAL
 ;2、策略组（域名组-节点组）
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]手动`[]自动`
 custom_proxy_group=🍺 BiliBili`select`[]DIRECT`[]手动`[]自动`
-custom_proxy_group=✨ AI`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
-custom_proxy_group=🥳 PikPak`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
-custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
-custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]IPV6`[]其他
+custom_proxy_group=✨ AI`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
+custom_proxy_group=🥳 PikPak`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
+custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
+custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他
 
 ;3、节点组
 custom_proxy_group=手动`select`.*
-custom_proxy_group=所有`url-test`.*`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=港台日新韩`url-test`(广港|广台|广日|广新|广韩|广美|香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea|亚太)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=台日新韩`url-test`(广台|广日|广新|广韩|广美|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=香港`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`60,150
