--- a/ouo.ini
+++ b/ouo.ini
@@ -20,16 +20,16 @@ ruleset=➡️ 国内,[]FINAL
 ;2、策略组（域名组-节点组）
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]手动`[]自动`
 custom_proxy_group=🍺 BiliBili`select`[]DIRECT`[]手动`[]自动`
-custom_proxy_group=✨ AI`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=🥳 起飞`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=📲 直连`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
-custom_proxy_group=📢 广告`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他`[]REJECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]EMBY-V`[]其他
+custom_proxy_group=✨ AI`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=🥳 起飞`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=📲 直连`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=📢 广告`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
 
 
 ;3、节点组
@@ -44,7 +44,7 @@ custom_proxy_group=新加坡`url-test`(广新|新加坡|SG|坡|狮城|🇸🇬|S
 custom_proxy_group=韩国`url-test`(广韩|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=美国`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|🇺🇸|United States)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=其他`url-test`(柬埔|斯坦|尼泊|也纳|克兰|比利时|尔兰|立陶宛|冰岛|秘鲁|耳其|利亚|埃及|希腊|斯洛伐克|孟加|芬兰|阿联|英国|德国|南非|意大|法国|加拿|墨西|印度|越南|罗斯|瑞士|瑞典|智利|荷兰|比亚|巴西|沙特|班牙|泰国|Germany|Bertain|Luxeourg|Argentina|Turkey|India)`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=EMBY-V`url-test`(代理)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=良心云`url-test`(流媒体)`http://www.gstatic.com/generate_204`60,150
 
 ;4、启用规则集
 enable_rule_generator=true
