Update custom_proxy_group entries in ouo.ini

--- a/ouo.ini
+++ b/ouo.ini
@@ -20,16 +20,16 @@ ruleset=➡️ 国内,[]FINAL
 ;2、策略组（域名组-节点组）
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]手动`[]自动`
 custom_proxy_group=🍺 BiliBili`select`[]DIRECT`[]手动`[]自动`
-custom_proxy_group=✨ AI`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=🥳 起飞`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=📲 直连`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
-custom_proxy_group=📢 广告`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他`[]REJECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]其他
+custom_proxy_group=✨ AI`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=🥳 起飞`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=📲 直连`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=📺 Emby`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
+custom_proxy_group=📢 广告`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]手动`[]自动`[]港台日新韩`[]港台新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]良心云`[]良心云-无日本`[]其他
 
 
 ;3、节点组
